# hand_axes_image_processing

./: .gitignore  DB_overview.md  README.md  bifaces_Marshall_et_al_2002.json  dataset_info.md  hello.py  main.py  pyproject.toml  requirements.txt
src/: COCO_JSON_gen.py  UUID_generator.py  coll_info.py  segment_collection_images.py  segment_lithic.py  segment_unique_object.py
uuid_images/: uuid_mapping.csv
