[project]
name = "hand-axes-image-processing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.7",
    "opencv-python>=4.12.0.88",
    "piexif>=1.1.3",
    "pillow>=12.0.0",
    "pycocotools>=2.0.10",
    "pyyaml>=6.0.3",
]
